# lvface

./: .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  mkdocs.yml  pyproject.toml
.github/workflows/: ci.yml  publish.yml
docs/: api.md  contributing.md  index.md
examples/: cluster_album.py  custom_detector.py  embed_and_store.py  find_in_group.py  match_two_group_photos.py  search_faiss.py  verify_two_faces.py
src/lvface/: __init__.py  errors.py  hub.py  io.py  metrics.py  recognizer.py  registry.py  runtime.py  types.py
src/lvface/detect/: __init__.py  align.py  base.py  insightface.py
src/lvface/embed/: __init__.py  base.py  onnx.py
tests/: gen_golden.py  test_detect_align.py  test_detect_base.py  test_detect_insightface.py  test_detect_parity.py  test_embed_base.py  test_embed_golden.py  test_embed_onnx.py  test_hub.py  test_import.py  test_io.py  test_matching.py  test_metrics.py  test_recognizer.py  test_registry.py  test_runtime.py  test_types.py
tests/data/: FIXTURES.md  golden_crop_T.npy  golden_meta.json  golden_pre_T.npy  golden_raw_T.npy
