[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"

[project]
name = "lvface"
dynamic = ["version"]
description = "Modern face-embedding framework for detection, alignment, embedding, and comparison."
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
license-files = ["LICENSE"]
authors = [{ name = "Mowshon" }]
keywords = ["face-recognition", "face-embedding", "arcface", "lvface", "onnx"]
classifiers = [
  "Development Status :: 2 - Pre-Alpha",
  "Intended Audience :: Developers",
  "Intended Audience :: Science/Research",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Topic :: Scientific/Engineering :: Image Recognition",
  "Typing :: Typed",
]
dependencies = [
  "numpy>=2.4",
  "onnxruntime>=1.23.2",
  "pillow>=12.2",
]

[project.optional-dependencies]
http = ["requests>=2.32"]
detect = ["insightface>=1.0.1"]
hub = ["huggingface-hub>=1.20"]
cluster = ["scikit-learn>=1.7"]
hungarian = ["scipy>=1.15"]
docs = [
  "mkdocs-material>=9.5",
  "mkdocstrings[python]>=0.27",
]
release = [
  "build>=1.2",
  "twine>=5.1",
]
dev = [
  "mypy>=2.1",
  "pre-commit>=4.0",
  "pytest>=9.1",
  "pytest-cov>=7.0",
  "requests>=2.32",
  "ruff>=0.15",
]
all = [
  "huggingface-hub>=1.20",
  "insightface>=1.0.1",
  "requests>=2.32",
  "scikit-learn>=1.7",
  "scipy>=1.15",
]

[project.urls]
Homepage = "https://github.com/mowshon/lvface"
Documentation = "https://github.com/mowshon/lvface#readme"
Issues = "https://github.com/mowshon/lvface/issues"
Repository = "https://github.com/mowshon/lvface"

[tool.hatch.version]
path = "src/lvface/__init__.py"

[tool.hatch.build.targets.sdist]
include = [
  "/CHANGELOG.md",
  "/CONTRIBUTING.md",
  "/LICENSE",
  "/README.md",
  "/docs",
  "/examples",
  "/mkdocs.yml",
  "/src",
]
exclude = ["/examples/__pycache__", "/examples/assets"]

[tool.hatch.build.targets.wheel]
packages = ["src/lvface"]

[tool.ruff]
include = ["src/**/*.py", "tests/**/*.py"]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "NPY"]

[tool.mypy]
strict = true

[[tool.mypy.overrides]]
module = ["PIL.*", "huggingface_hub.*", "insightface.*", "onnxruntime.*", "requests.*"]
ignore_missing_imports = true

[tool.pytest.ini_options]
addopts = [
  "-ra",
  "--strict-config",
  "--strict-markers",
  "--cov=lvface",
  "--cov-fail-under=100",
  "--cov-report=term-missing",
]
testpaths = ["tests"]
markers = [
  "detect: tests that require the InsightFace detection extra",
  "model: tests that require model weights",
]

[tool.coverage.run]
branch = true
source = ["lvface"]

[tool.coverage.report]
show_missing = true
